# modus-takehome

./: .gitignore  Makefile  PLAN.md  README.md  discussion.md  prompt.md  pyproject.toml
examples/inputs/: comps_only.json  dcf_only.json  full.json  high_dispersion.json  last_round_only.json  with_overrides.json
examples/outputs/: comps_only.json  comps_only.md  dcf_only.json  dcf_only.md  full.json  full.md  high_dispersion.json  high_dispersion.md  last_round_only.json  last_round_only.md  with_overrides.json  with_overrides.md
src/vc_audit/: __init__.py  _formatting.py  cli.py
src/vc_audit/api/: __init__.py  server.py
src/vc_audit/data/: __init__.py  comps_provider.py  index_provider.py
src/vc_audit/data/fixtures/: comp_universe.json  nasdaq_history.json
src/vc_audit/engine/: __init__.py  factory.py  triangulator.py
src/vc_audit/methods/: __init__.py  base.py  comps.py  dcf.py  descriptor.py  last_round.py
src/vc_audit/models/: __init__.py  assumption.py  citation.py  company.py  request.py  result.py  types.py
src/vc_audit/reports/: __init__.py  json_writer.py  markdown_writer.py
src/vc_audit/ui/: __init__.py  _helpers.py  app.py
tests/: test_api.py  test_cli.py  test_contracts.py  test_integration_parity.py  test_models.py  test_reports.py  test_triangulator.py  test_ui.py
tests/test_methods/: test_comps.py  test_dcf.py  test_last_round.py
