[project]
name = "vc-audit"
version = "0.1.0"
description = "Auditable fair-value workflow for private VC portfolio companies (multi-method triangulation)."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Taylor Haaff" }]
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.7",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "typer>=0.12",
]

[project.scripts]
vc-audit = "vc_audit.cli:app"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "mypy>=1.10",
    "ruff>=0.5",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vc_audit"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]  # asserts are fine in tests

[tool.mypy]
strict = true
pretty = true
python_version = "3.12"
files = ["src", "tests"]
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
